@@ -1,3 +1,11 @@
+2004/02/10 19:01 (+0100) kaffeetisch
+
+	* t/GnomeConfig.t: Re-enable the get_float_with_default, with
+	skips.  The relevant bug has been fixed in libgnomeui 2.5.4.
+
+	* t/GnomeIconSelection.t: Don't check the return value of
+	get_icon, there seems to be no way to predict it.
+
 2004/02/10 17:01 (+0100) kaffeetisch
 
 	Applying a patch from muppet.
